syntax = "proto3";

option csharp_namespace = "DBGrpcApi";

package GrpcService;

// The greeting service definition.
service HislData {
  // 读取指定间隔的时间点的值
  rpc GetHisValue (HisDataRequest) returns (HisDataCollectionReplay);

  //读取所有值
  rpc GetAllHisValue (AllHisDataRequest) returns (HisDataCollectionReplay);

   // 读取指定间隔的时间点的统计值
  rpc GetNumberValueStatisticsDataAtTimePoint (NumberValueStatisticsDataAtTimePointRequest) returns (StatisticsDataCollectionReplay);

  //读取统计值
  rpc GetNumberValueStatisticsData (NumberValueStatisticsDataRequest) returns (StatisticsDataCollectionReplay);

  //查找指定时间内是否包含指定的值，包含则返回对应的时间
  rpc FindTagValue (FindTagValueRequest) returns (FindTagValueDateTimeReplay);

  //查找指定时间内是否包含指定的值，包含则返回对应的时间集合
  rpc FindTagValues (FindTagValueRequest) returns (FindTagValueDateTimeReplay);

  //计算在某个时间段内满足指定的值条件的持续时间
  rpc CalTagValueKeepTime (FindTagValueRequest) returns (FindTagValueDoubleReplay);

  //计算数值型变量平均值
  rpc CalNumberTagAvgValue (FindTagValueRequest) returns (FindTagValueDoubleReplay);

  //查找在某个时间段内数值型变量的最大值
  rpc FindNumberTagMaxValue (FindTagValueRequest) returns (FindTagValueDoubleDateTimeReplay);

  //查找在某个时间段内数值型变量的最小值
  rpc FindNumberTagMinValue (FindTagValueRequest) returns (FindTagValueDoubleDateTimeReplay);
}

message HisDataRequest{
	string Token=1;
	repeated string Tags=2;
	int64 StartTime=3;
	int64 EndTime=4;
	int32 Duration=5;
	int32 QueryType=6;
}


message AllHisDataRequest{
	string Token=1;
	repeated string Tags=2;
	int64 StartTime=3;
	int64 EndTime=4;
}


message NumberValueStatisticsDataRequest{
	string Token=1;
	repeated string Tags=2;
	int64 StartTime=3;
	int64 EndTime=4;
	int32 Duration=5;
}


message NumberValueStatisticsDataAtTimePointRequest{
	string Token=1;
	repeated string Tags=2;
	int64 StartTime=3;
	int64 EndTime=4;
	int32 Duration=5;
}

message HisDataCollectionReplay{
	bool result=1;
	repeated HisDataPointCollection Values=2;
}

message StatisticsDataCollectionReplay{
	bool result=1;
	repeated StatisticsDataPointCollection Values=2;
}

message HisDataPointCollection{
	string Tag=1;
	int32 ValueType=2;
	repeated HisDataPoint Values=3;
}

message HisDataPoint{
	string Value=1;
	int64 Time=2;
}


message StatisticsDataPointCollection{
	string Tag=1;
	repeated StatisticsDataPoint Values=3;
}

message StatisticsDataPoint{
int64 Time=1;	
double AvgValue=2;
int64 MaxTime=3;
double MaxValue=4;
int64 MinTime=5;
double MinValue=6;
}

//查找值统计请求
message FindTagValueRequest
{
	string Token=1;
	string Tag=2;
	int64 StartTime=3;
	int64 EndTime=4;
	int32 CompareType=5;
	string Value=6;
	string Interval=7;
}

message FindTagValueDateTimeReplay
{
	bool Result=1;
	repeated int64 Time=2;
	repeated double Value=3;
}

message FindTagValueDoubleDateTimeReplay
{
	bool Result=1;
	double Values=2;
	repeated int64 Times=3;
	
}

message FindTagValueDoubleReplay
{
	bool Result=1;
	double Values=2;
}
